--- a/identity-example/build.gradle
+++ b/identity-example/build.gradle
@@ -7,6 +7,13 @@ assemble.dependsOn('lint')
 
 emerge {
     apiToken = System.getenv("EMERGE_API_KEY")
+
+    vcs {
+        gitHub {
+            repoOwner = "EmergeTools"
+            repoName = "stripe-android"
+        }
+    }
 }
 
 android {
